# big2

./: .gitignore  Cargo.toml  README.md  index.html
.github/workflows/: rust.yml
benches/: bench.rs  benchfactor.rs
big2lib/: Cargo.toml
big2lib/src/: app.rs  big2rules.rs  lib.rs  messages.rs  players.rs
big2lib/src/widgets/: board.rs  buttons.rs  hand.rs  mod.rs  players.rs
big2server/: Cargo.toml
big2server/src/: main.rs  messages.rs  rooms.rs  routes.rs
module-py3/: Cargo.toml  client.py  test.py
module-py3/src/: lib.rs
public/: index.html
src/: app.rs  big2rules.rs  card.rs  cli.rs  client.rs  lib.rs  main.rs  muon.rs  network.rs  prototype.rs  server.rs
src/network/: legacy.rs  mod.rs
src/widgets/: board.rs  buttons.rs  cards.rs  hand.rs  mod.rs
tests/: big2rules_srv_test_vectors.rs  big2rules_tests.rs
