[package]
name = "big2"
version = "0.2.0"
authors = ["René van Dorst"]
edition = "2021"
exclude = ["target", "Cargo.lock"]
license = "MIT"

[dependencies]
rand = "0.8"
crossterm = { version = "0.26", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pico-args = "0.5.0"
log = "0.4"
simplelog = "0.12"

