[package]
name = "big2"
version = "0.4.0"
authors = ["René van Dorst"]
edition = "2021"
exclude = ["target", "Cargo.lock"]
license = "MIT"
rust-version = "1.70"
description = "Chinees poker game Big2"

[dependencies]
rand = "0.8"
crossterm = { version = "0.26", features = ["event-stream"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
pico-args = "0.5.0"
log = "0.4"
simplelog = "0.12"
smol_str = "0.2.0"
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"

[[bin]]
name = "big2-cli"
test = true

[features]
kani = []

[dev-dependencies]
bolero = "0.9.0"
kani-verifier = "0.29"


[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = true
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = true
