[package]
name = "big2lib"
authors = ["René van Dorst <opensource@vdorst.com>"]
repository = "https://github.com/vdorst/big2"
license = "MIT"
version = "0.2.0"
edition = "2018"
description = "Big2 with egui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.13" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true}
rand = { version = "0.8.3", features = ["default", "alloc", "small_rng"] }
ws_stream_tungstenite = { version = "0.6.1", features = [ "tokio_io" ] }
uuid = { version = "0.8", features = ["serde", "v4"] }

[[bin]]
name = "main"

[[bin]]
name = "websocket"

[features]
default = [ "serde" ]
http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
opt-level = 2 # fast and small wasm
