[package]
name = "py3-module"
version = "0.1.0"
authors = ["René van Dorst <opensource@vdorst.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "pybig2"
crate-type = ["cdylib"]

[dependencies]
big2 = { path = "../" }

[dependencies.pyo3]
version = "0.12.1"
features = ["extension-module"]

